fix(website):Fixed overflow bug in mobile version.

--- a/website/src/index.css
+++ b/website/src/index.css
@@ -8,5 +8,7 @@
   }
 }
 html, body, #root {
-    overflow-x: hidden;
+  overflow-x: hidden;
+  max-width: 100vw;
+  position: relative;
 }
